2015-12-21  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.1.6 release!

	* Fix quark integer ID mapping to Down/Up metadata keys in AlphaS
	factory routine.

2015-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Add a cstr_to_fstr function to LHAGlue.cc, for improved C++ to
	Fortran string conversion (handling length limits, padding rather
	than zero-termination, etc.)

2015-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Add PDF::print() protection against being unable to read the PDF
	set index file, so there isn't a crash for the trivial reason of
	on-screen printout formatting when the data path is restricted
	with trailing ::.

2015-12-16  Andy Buckley  <andy.buckley@cern.ch>

	* Fixes to the lhapdf script. Thanks again to Dmitry Kalinkin for
	a patch.

	* Add missing getlam4 and getlam5 functions to Fortran
	interface. Thanks to Dmitry Kalinkin for the patch.

	* Update Cython and Python interfaces to support Python3
	syntax. Thanks to Vitaly Yermolchyk for the patches!

	* Update to even newer boost.m4

2015-12-03  Andy Buckley  <andy.buckley@cern.ch>

	* Don't append the install prefix to path searches if
	$LHAPDF_DATA_PATH ends with a double-colon, ::.

	* De-inline the availablePDFSets() function, and veto duplicate
	set names.

2015-09-23  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Determine number of parameter variation members by counting
	number of "+" signs in ErrorType, e.g. "replicas+as+mc+mb+mt".

	* Added a new checkPdfType() member function to PDFSet class.

2015-07-17  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Added support for combined PDF+alphaS sets via new ErrorType
	values, i.e. "replicas+as", "hessian+as" and "symmhessian+as".

2015-04-10  Andy Buckley  <andy.buckley@cern.ch>

	* Updating AUTHORS notice to final EPJC paper reference, and
	adding a final citation reminder message via the Config
	destructor.

2015-03-20  Andy Buckley  <andy.buckley@cern.ch>

	* src/Factories.cc: Adding a set of expandPDFsStr(), decodePDFStr