@@ -483,6 +483,17 @@ namespace LHAPDF {
     /// @deprecated Use orderQCD instead
     int qcdOrder() const { return orderQCD(); }
 
+    /// @brief Get a quark mass in GeV by PDG code (|PID| = 1-6 only)
+    ///
+    /// Convenience interface to the Mass* info keywords.
+    /// Returns -1 for an undefined PID.
+    double quarkMass(int id) const;
+
+    /// @brief Get a flavor scale threshold in GeV by PDG code (|PID| = 1-6 only)
+    /// Convenience interface to the Mass* and Threshold* info keywords.
+    /// Returns -1 for an undefined PID.
+    double quarkThreshold(int id) const;
+
     //@}
 
 
